# langid

./: .gitignore  AGENTS.md  CodeBERTa_lid_test.py  README.md  analyze_model.py  eda.py  feature_tester.py  features.py  main.py  model.json  package-lock.json  package.json  pyproject.toml  tools.py  train_model.py  vite.config.js  wrangler.jsonc
.github/workflows/: deploy-cloudflare-workers.yml
data/: rosetta_parser.py  schema.sql  utils.py
experiments/: ex01_train_model.py  ex02_features.py  ex02_train_model.py  ex03_features.py  ex03_train_model.py  ex05_features.py  ex05_train_model.py  ex06_train_model.py  ex09_features.py  ex09_train_model.py  ex11_features.py  ex17.py  experiments.md  features_ex1.py  features_ex10.py  features_ex11.py  features_ex6.py  features_ex8.py  features_ex9.py  regex_experiment.py  size_test_rf.py  train_model_ex10.py  train_model_ex11.py  train_model_ex15.py  train_model_ex4.py  train_model_ex6.py  train_model_ex7.py  train_model_ex9.py
feature_lists/: c.py  c_sharp.py  cpp.py  css.py  dart.py  go.py  graphql.py  html_lang.py  ini.py  java.py  javascript.py  json_lang.py  kotlin.py  lua.py  makefile.py  markdown.py  misc.py  objective_c.py  perl.py  php.py  python.py  r_lang.py  ruby.py  rust.py  shell.py  sql.py  swift.py  typescript.py  visual_basic_dotnet.py  webassembly.py  xml.py  yaml.py
js/: hljs_worker.js  predict_language.js  test_hljs.py  test_predict_language.js
web/: app.js  build_model.js  index.html  index.js  model.json  modelViz.js  predict.js  predictLanguage.js  serve.js  serve.py
web/public/: _headers  (+1 more)
(+4 files in other folders)
